Social media icons, image

--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "About this blog"
 description: |
-  Some additional details about the blog
+  Who am I?
 ---
 
 ```{r setup, include=FALSE}
@@ -16,40 +16,38 @@ d-article a:hover {
 }
 ```
 
-Welcome to my blog! My name is Stefan Stein and I'm a third year statistics PhD student at the University of Warwick. I blog about stats and R. I obtained my BSc and MSc in mathematics at the University of Heidelberg, Germany, before coming to the UK for my PhD. I like building unconventional stuff in R and Python. Feel free to connect with me via Twitter.
+<center>
+  <img src="websitefotome.jpeg" style="border-radius: 50%; width: 10rem;" />
+</center>
+
+Welcome to my blog! My name is Stefan Stein and I'm a third year statistics PhD student at the University of Warwick. I blog about maths, stats and R. My PhD is on the asymptotics of random networks and high-dimensional statistics. Before coming to the UK for my PhD I obtained my BSc and MSc in mathematics at the University of Heidelberg, Germany. I like building unconventional stuff in R and Python and I set up this blog to share as well as keep track off some of the programming projects I did. Feel free to connect with me.
 
 <p style="text-align: center;">
-<a href='mailto:D.Selby@warwick.ac.uk' title="E-mail me">
+<a href='mailto:s.stein@warwick.ac.uk' title="E-mail me">
   <span class="fa-stack fa-lg">
   <i class="fa fa-circle fa-stack-2x"></i>
   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
   </span>
 </a>
-<a href="https://www.facebook.com/selbosh" title="Facebook">
-  <span class="fa-stack fa-lg">
-  <i class="fa fa-circle fa-stack-2x"></i>
-  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-  </span>
-</a>
-<a href="https://github.com/Selbosh" title="GitHub">
+<a href="https://github.com/stefan-stein" title="GitHub">
   <span class="fa-stack fa-lg">
   <i class="fa fa-circle fa-stack-2x"></i>
   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
   </span>
 </a>
-<a href="https://linkedin.com/in/daselby" title="LinkedIn">
+<a href="https://www.linkedin.com/in/stefan-s-871429142" title="LinkedIn">
   <span class="fa-stack fa-lg">
   <i class="fa fa-circle fa-stack-2x"></i>
   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
   </span>
 </a>
-<a href="https://twitter.com/TeaStats" title="Twitter">
+<a href="https://twitter.com/SteinsZeit" title="Twitter">
   <span class="fa-stack fa-lg">
   <i class="fa fa-circle fa-stack-2x"></i>
   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
   </span>
 </a>
-<a href="http://warwick.ac.uk/dselby" title="Academic page">
+<a href="https://warwick.ac.uk/fac/sci/statistics/staff/research_students/stein/" title="Academic page">
   <span class="fa-stack fa-lg">
   <i class="fa fa-circle fa-stack-2x"></i>
   <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
