--- a/_posts/2020-01-09-webcrawling1/webcrawling1.Rmd
+++ b/_posts/2020-01-09-webcrawling1/webcrawling1.Rmd
@@ -3,8 +3,6 @@ title: "Web crawling with R part 1: Teaching rvest how to crawl"
 description: |
   rvest is a great package for downloading information from the internet straight into your R session. 
   However, it does not natively "crawl" the web, i.e. traverse from one website to another. So let's teach it!
-  The code and the extracted hyperlink network data can be found in the corresponding 
-  <a href="https://github.com/stefan-stein/Wikipedia_webcrawling">GitHub repository</a>.
 author:
   - name: Stefan Stein
     url: {}
@@ -20,7 +18,7 @@ output:
     self_contained: false
 bibliography: bibliography.bib
 repository_url: https://github.com/stefan-stein/Wikipedia_webcrawling
-preview: https://en.wikipedia.org/wiki/Squirrel#/media/File:Sciuridae.jpg
+preview: https://upload.wikimedia.org/wikipedia/commons/6/68/Sciuridae.jpg
 ---
 
 ```{r setup, include=FALSE}
@@ -31,7 +29,8 @@ knitr::opts_chunk$set(echo = FALSE)
 When I was a kid, the only way to access the internet I knew was through a web browser. You opened it up and sort of like stepping through a portal you went into the world of the internet, that was somewhere "out there".
 When I heard about web-crawlers, programs that systematically traverse and analyse the web, for the first time, I imagined a program that would open up your browser and load one website after another, dozens of tabs at a time, at a speed too fast for the human eye to follow. I was awestruck by the mere thought of it! As you might imagine, that’s not quite how it works. As you might also imagine, I didn’t have the slightest idea about how the internet worked. Well, a decade or so later, I still don’t really know how the internet works deep down, but I recently found out that I do know enough R to build my own web-crawler. In this blog post I will share my experiences with you.
 
-Our main tool will be the package `rvest`, [@rvest] by Hadley Wickham. This is an excellent package for obtaining content from a specific webpage given its URL. However, `rvest` does not natively crawl, that is, it does not traverse from one webpage to the next. So our goal will be to implement this crawling mechanism. As a case study we will start with the Wikipedia page for "squirrel" and systematically visit all the other English Wikipedia pages that can be reached with no more than two clicks. Mathematically speaking, we are extracting the 2-neighborhood of the hyperlink network of Wikipedia's "squirrel" page. We are restricting ourselves to the English Wikipedia, because, as we will see, this already gives us a massive hyperlink network and extending the crawling to other languages would increase the size of our network even further.
+Our main tool will be the package `rvest`, [@rvest] by Hadley Wickham. This is an excellent package for obtaining content from a specific webpage given its URL. However, `rvest` does not natively crawl, that is, it does not traverse from one webpage to the next. So our goal will be to implement this crawling mechanism. As a case study we will start with the Wikipedia page for "squirrel" and systematically visit all the other English Wikipedia pages that can be reached with no more than two clicks. Mathematically speaking, we are extracting the 2-neighborhood of the hyperlink network of Wikipedia's "squirrel" page. We are restricting ourselves to the English Wikipedia, because, as we will see, this already gives us a massive hyperlink network and extending the crawling to other languages would increase the size of our network even further. The code and the extracted hyperlink network data can be found in the corresponding 
+<a href="https://github.com/stefan-stein/Wikipedia_webcrawling">GitHub repository</a>.
 
 **A little brain teaser before reading on:** What do you think how many (English) Wikipedia pages you can reach with just two clicks starting from the entry for "squirrel"?
 
@@ -273,8 +272,9 @@ length(to_be_checked_urls)
 26625! That's a lot! How close was your initial estimate? The actual number turns out to be slightly smaller, 22524, to be precise, but that is still a lot of pages we can reach with just two clicks. 
 To finish the scraping, change `length(links_body)` in the loop above to `26625` and run the loop again. This will take quite a long time (at least 26625 seconds which is just shy of 7.5 hours), so when I did this project I simply left my computer running over night. There is a good chance you might get away with a shorter break between downloading pages, but I am not sure at which point Wikipedia might decide that enough is enough and block your IP. If you don't want to wait for 7.5 hours (not that anyone could blame you), feel free to check out the corresponding [GitHub repo](https://github.com/stefan-stein/Wikipedia_webcrawling) which contains the scraped link structure as well as the code for some basic network analysis that I will be going over in the next post. In that post we will analyse the actual link structure of the data we scraped and find some explanation as to why this number of hyperlinks is so impressive. I'd love to see you back here again for that!
 
+#### Credits for the preview image
 
-
+<a href="https://commons.wikimedia.org/wiki/File:Sciuridae.jpg" title="via Wikimedia Commons">Chicoutimi (montage)  KarakalAndiWNational Park Serviceen:User:Markus KrötzschThe Lilac Breasted RollerNico Conradie from Centurion, South AfricaHans HillewaertSylvouilleNational Park Service</a> [<a href="https://creativecommons.org/licenses/by/3.0">CC BY</a>]
 
 
 
